--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Blackjack)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Blackjack source.cpp)
+add_executable(Blackjack source.cpp deck.h)
