Created a function that displays the card in graphical form (going to add to it later to make it so when you add the graphic strings it will put them side by side)
Created Dealer and Player and Hand Framework.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Blackjack)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Blackjack source.cpp deckOfCards.h cards.cpp deck.cpp)
+add_executable(Blackjack source.cpp Cards.cpp deck.cpp Player.cpp Player.h Dealer.cpp Dealer.h Hand.cpp Hand.h Deck.cpp Deck.h)
