--- a/Blackjack.vcxproj
+++ b/Blackjack.vcxproj
@@ -154,6 +154,9 @@
     <ClInclude Include="Hand.h" />
     <ClInclude Include="Player.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="leaderBoard.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
